Hidden gives the browsers a change to avoid rendering the invisible layers. Removed the list-style attribute from zebra lists, as this could just as well be handled by a seperate class.

--- a/receptionist_client/web/css/placing_and_sizing.css
+++ b/receptionist_client/web/css/placing_and_sizing.css
@@ -40,6 +40,7 @@ button::-moz-focus-inner {
 }
 
 .hidden {
+  display: none;
   z-index: -100;
 }
 
@@ -47,9 +48,7 @@ button::-moz-focus-inner {
   font-size: 0.9em;
 }
 
-.zebra {
-  list-style-type: none;
-}
+.zebra {}
 
 .zebra li {
   padding: 5px;
